new mr sync system... + fixed cow_xmessage...

--- a/README
+++ b/README
@@ -7,7 +7,7 @@ Tip:
 If you need a free private git repository, have a look at assembla.com. :)
 
 Usage:
-1) Run bins/public_bin/setup_dotfiles.sh to set up the dotfiles and bin directory.
+1) Run ./bins/public_bin/setup_dotfiles.sh to set up the dotfiles and bin directory.
 2) Create a ~/.bash_env file containing:
 export PATH=$PATH:$HOME/bin/public_bin
 
