--- a/README
+++ b/README
@@ -8,7 +8,7 @@ If you need a free private git repository, have a look at assembla.com. :)
 
 Usage:
 1) Run ./bins/public_bin/setup_dotfiles.sh to set up the dotfiles and bin directory.
-2) Create a ~/.bash_env file containing:
+2) Create a ~/.bash_env_private file containing:
 export PATH=$PATH:$HOME/bin/public_bin
 
 License:
