--- a/README
+++ b/README
@@ -9,7 +9,15 @@ If you need a free private git repository, have a look at assembla.com. :)
 Usage:
 1) Run ./bins/public_bin/setup_dotfiles.sh to set up the dotfiles and bin directory.
 2) Create a ~/.bash_env_private file containing:
-export PATH=$PATH:$HOME/bin/public_bin
+  export PATH=$PATH:$HOME/bin/public_bin
+
+3) Optional: Change prompt style by adding something like this to ~/.bash_env_private :
+  export PROMPTSTYLE=2
+
+Test available prompts with:
+  load_prompt 2
+  load_prompt 4
+  etc
 
 License:
 Unless otherwise specified inside a file or folder, everything is under GPLv3 (cf COPYING.txt).
